--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Webpack Sample</title>
-	<link rel="stylesheet" href="./main.css">
+	<title>Document</title>
 </head>
 <body>
-	
+	<script type="module" src="main.js"></script>
 </body>
 </html>
